Fix the syllable opcode
Fixes #354

The setting of the syllable marker was a bit fishy and didn't work for
a number of releases. Under some circumstances it would clash with the
usage of CAPSEMPH and hence syllables weren't translated correctly.
This is fixed now by properly defining the bit mask used to syllable
marks and caps emphasis. The bit shifting has been replaced with bit
masks. And cycling is now done with an static array and a selector
that cycles through it.

--- a/liblouis/liblouis.h.in
+++ b/liblouis/liblouis.h.in
@@ -75,9 +75,9 @@ typedef enum {
   computer_braille = 0x0400,
   no_translate = 0x0800,
   no_contract = 0x1000,
-  // unused  0x2000,
-  // used by syllable  0x4000,
-  // used by syllable  0x8000
+  // SYLLABLE_MARKER_1  0x2000,
+  // SYLLABLE_MARKER_1  0x4000
+  // CAPSEMPH  0x4000
 } typeforms;
 
 #define italic    emph_1
