Revert "generic_stages: temporarily ignore all target prebuilts."
Revert CL: generic_stages: temporarily ignore all target prebuilts.

Clear all binaries to build from scratch after llvm roll.
This process is documented at
https://sites.google.com/a/google.com/chromeos/for-team-members/infrastructure/chromeos-admin/clear_binaries

BUG=chromium:752642
TEST='./cbuildbot/run_tests' passed.

Change-Id: I611d680215372a99dd3ecf402a213867b5f71465
Reviewed-on: https://chromium-review.googlesource.com/609924
Reviewed-by: Don Garrett <dgarrett@chromium.org>
Commit-Queue: Manoj Gupta <manojgupta@chromium.org>
Tested-by: Manoj Gupta <manojgupta@chromium.org>
Trybot-Ready: Manoj Gupta <manojgupta@chromium.org>

--- a/cbuildbot/config_dump.json
+++ b/cbuildbot/config_dump.json
@@ -17,7 +17,7 @@
         "binhost_bucket": null,
         "binhost_key": null,
         "binhost_test": false,
-        "board_replace": true,
+        "board_replace": false,
         "boards": null,
         "branch": false,
         "branch_util_test": false,
@@ -8353,6 +8353,7 @@
     "falco-full-compile-paladin": {
         "_template": "paladin",
         "active_waterfall": "chromeos",
+        "board_replace": true,
         "boards": [
             "falco"
         ],
@@ -16559,6 +16560,7 @@
     "nyan-full-compile-paladin": {
         "_template": "paladin",
         "active_waterfall": "chromeos",
+        "board_replace": true,
         "boards": [
             "nyan"
         ],
