Convert the format-sources target to a user defined automake target
That way we do not have to hard code the subdirectories and do not
have to manually recurse into them. However this comes at the cost of
loosing the test that checks for unstaged files in the particular
subdirectories.

If we wanted to do this we would have to define the order in which the
source is compiled by prepending the root dir to SUBDIRS in
Makefile.am and we would probably also have to check for the presence
of the git command in configure.ac.

For some background on user defined recursive
targets in automake check
https://www.gnu.org/software/automake/manual/html_node/Subdirectories.html

--- a/configure.ac
+++ b/configure.ac
@@ -76,6 +76,12 @@ AC_HEADER_STDC
 AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 
+# define an additional recursive make target to format the sources.
+# Also check if clang-format is installed
+AM_EXTRA_RECURSIVE_TARGETS([format-sources])
+AC_CHECK_PROG([SOURCE_FORMATTER], [clang-format], [clang-format])
+AM_CONDITIONAL([HAVE_SOURCE_FORMATTER], [test x$SOURCE_FORMATTER = xclang-format])
+
 # GNU help2man creates man pages from --help output; in many cases,
 # this is sufficient, and obviates the need to maintain man pages
 # separately. However, some developers do not have it so we do not
