--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -77,8 +77,7 @@ nobase_dist_bin_SCRIPTS = \
 	lou_maketable.d/wrap_patgen.sh
 endif
 
-SOURCE_FORMATTER = clang-format -i
-
-.PHONY : format-sources
-format-sources :
-	for file in $(SOURCES); do $(SOURCE_FORMATTER) $$file; done
+if HAVE_SOURCE_FORMATTER
+format-sources-local:
+	for file in $(SOURCES); do $(SOURCE_FORMATTER) -i $$file; done
+endif
