conf: Prefer system emoji fonts to third-party ones
Prefer the system provided emoji fonts on systems which provide one,
such as Windows, MacOS and Android, even if the Emoji One or Emoji Two
fonts are installed.

This also allows free software OSes such as GNOME to prefer the Emoji
One font, which is not used in other OSes and therefore has a unique
brand identity, by installing them and only them by default.

Users can use more capable fonts while Emoji One and Emoji Two catch up
by installing a font otherwise already used by another system, such as
Google's freely redistributable Noto Emoji font.

https://bugzilla.redhat.com/show_bug.cgi?id=1496761

--- a/conf.d/45-generic.conf
+++ b/conf.d/45-generic.conf
@@ -5,14 +5,7 @@
 
 <!-- Emoji -->
 
-	<alias binding="same">
-		<family>Emoji Two</family>
-		<default><family>emoji</family></default>
-	</alias>
-	<alias binding="same">
-		<family>Emoji One</family>
-		<default><family>emoji</family></default>
-	</alias>
+	<!-- System emoji -->
 	<alias binding="same">
 		<family>Noto Color Emoji</family> <!-- Google -->
 		<default><family>emoji</family></default>
@@ -31,6 +24,15 @@
 	</alias>
 	<alias binding="same">
 		<family>EmojiOne Mozilla</family> <!-- Mozilla -->
+		<default><family>emoji</family></default>
+	</alias>
+	<!-- Third-party emoji -->
+	<alias binding="same">
+		<family>Emoji Two</family>
+		<default><family>emoji</family></default>
+	</alias>
+	<alias binding="same">
+		<family>Emoji One</family>
 		<default><family>emoji</family></default>
 	</alias>
 	<!-- B&W -->
