--- a/conf.d/60-generic.conf
+++ b/conf.d/60-generic.conf
@@ -29,14 +29,15 @@
 	<alias binding="same">
 		<family>emoji</family>
 		<prefer>
-			<family>Emoji Two</family>
-			<family>Emoji One</family>
 			<!-- System fonts -->
 			<family>Noto Color Emoji</family> <!-- Google -->
 			<family>Apple Color Emoji</family> <!-- Apple -->
 			<family>Segoe UI Emoji</family> <!-- Microsoft -->
 			<family>Twitter Color Emoji</family> <!-- Twitter -->
 			<family>EmojiOne Mozilla</family> <!-- Mozilla -->
+			<!-- Third-Party fonts -->
+			<family>Emoji Two</family>
+			<family>Emoji One</family>
 			<!-- Non-color -->
 			<family>Noto Emoji</family> <!-- Google -->
 			<family>Android Emoji</family> <!-- Google -->
