ext-tile: add a lightfield tile list decoder example
Added a lightfield tile list decoder example. It takes an input file
that contains the anchor frames that are references of the coded
tiles, the camera frame header, and tile list OBUs that include the
required tile information and the compressed tile data. This input
file is reconstructed from the encoded lightfield ivf file, and is
decodable by AV1 decoder.

Change-Id: Ib683a259175503c69b113bf55956c6dd977ce1cc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -466,6 +466,15 @@ if(ENABLE_EXAMPLES AND CONFIG_AV1_ENCODER)
 endif()
 
 if(ENABLE_EXAMPLES AND CONFIG_AV1_DECODER)
+  add_executable(lightfield_tile_list_decoder
+                 "${AOM_ROOT}/examples/lightfield_tile_list_decoder.c"
+                 $<TARGET_OBJECTS:aom_common_app_util>
+                 $<TARGET_OBJECTS:aom_decoder_app_util>)
+  list(APPEND AOM_EXAMPLE_TARGETS lightfield_tile_list_decoder)
+  list(APPEND AOM_APP_TARGETS lightfield_tile_list_decoder)
+endif()
+
+if(ENABLE_EXAMPLES AND CONFIG_AV1_DECODER)
   add_executable(lightfield_decoder "${AOM_ROOT}/examples/lightfield_decoder.c"
                  $<TARGET_OBJECTS:aom_common_app_util>
                  $<TARGET_OBJECTS:aom_decoder_app_util>)
