Catch lost context errors
Sync between client and service side to eliminate races.
Then execute any callbacks on the client thread task runner.

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I7dc7a2aa0b7f6ed30f7a083c622fb5cbf68d521e
Reviewed-on: https://chromium-review.googlesource.com/1089637
Commit-Queue: Jonathan Backer <backer@chromium.org>
Reviewed-by: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#565393}
Former-commit-id: 05d5cec5bd2420e17f212d19b4a72d4166175eb2

--- a/gpu/BUILD.gn
+++ b/gpu/BUILD.gn
@@ -156,6 +156,7 @@ static_library("test_support") {
     "//gpu/command_buffer/client:gles2_interface",
   ]
   deps = [
+    "//base/test:test_support",
     "//gpu/command_buffer/client:raster",
     "//gpu/command_buffer/common",
     "//gpu/ipc:gl_in_process_context",
