[cr-buildbucket] Beef up linux_chromium_cfi_rel_ng, linux_upload_clang.
BUG=731417,731456

Change-Id: I9fbb2c34f149380a9b98dfc1bfc7ad56041f6fd6
Reviewed-on: https://chromium-review.googlesource.com/1098307
Reviewed-by: Ryan Tseng <hinoka@chromium.org>
Commit-Queue: Jao-ke Chin-Lee <jchinlee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566647}
Former-commit-id: 2fac1e71717c1d222bae96b391ac896a2be52a09

--- a/infra/config/global/cr-buildbucket.cfg
+++ b/infra/config/global/cr-buildbucket.cfg
@@ -2412,7 +2412,7 @@ buckets {
     builders {
       mixins: "linux-try"
       name: "linux_chromium_cfi_rel_ng"
-      dimensions: "cores:" # clear cores dimension while testing beefier bots
+      dimensions: "cores:32"
     }
     builders { mixins: "linux-try" name: "linux_chromium_chromeos_asan_rel_ng" }
     builders { mixins: "linux-try" name: "linux_chromium_chromeos_asan_variable" }
@@ -2503,6 +2503,7 @@ buckets {
     builders {
       mixins: "linux-try"
       name: "linux_upload_clang"
+      dimensions: "cores:32"
       recipe {
         name: "chromium_upload_clang"
       }
