--- a/tools/perf/expectations.config
+++ b/tools/perf/expectations.config
@@ -140,6 +140,7 @@ crbug.com/901510 [ Nexus6_Webview ] memory.long_running_idle_gmail_tbmv2/* [ Ski
 crbug.com/901510 [ Nexus_5 ] memory.long_running_idle_gmail_tbmv2/* [ Skip ]
 crbug.com/901510 [ Nexus5X_Webview ] memory.long_running_idle_gmail_tbmv2/* [ Skip ]
 crbug.com/901510 [ Nexus_5X ] memory.long_running_idle_gmail_tbmv2/* [ Skip ]
+crbug.com/902064 [ Nexus_5 ] memory.long_running_idle_gmail_background_tbmv2/* [ Skip ]
 
 # Benchmark: memory.long_running_idle_gmail_background_tbmv2
 crbug.com/611167 [ Android_Svelte ] memory.long_running_idle_gmail_background_tbmv2/* [ Skip ]
@@ -368,6 +369,7 @@ crbug.com/799080 [ Nexus_5X Android_Webview ] v8.browsing_mobile-future/browse:s
 crbug.com/799080 [ Nexus_5X Android_Webview ] v8.browsing_mobile-future/browse:social:facebook [ Skip ]
 crbug.com/875159 [ Win_10 ] v8.browsing_desktop-future/browse:social:facebook_infinite_scroll [ Skip ]
 crbug.com/901534 [ Nexus6_Webview ] v8.browsing_mobile-future/browse:news:toi [ Skip ]
+crbug.com/902064 [ Nexus_5 ] v8.browsing_mobile-future/browse:news:toi [ Skip ]
 
 # Benchmark: v8.detached_context_age_in_gc
 crbug.com/770982 [ Win ] v8.detached_context_age_in_gc/Docs_(1_open_document_tab) [ Skip ]
