--- a/services/media_session/public/mojom/BUILD.gn
+++ b/services/media_session/public/mojom/BUILD.gn
@@ -4,7 +4,10 @@
 
 import("//mojo/public/tools/bindings/mojom.gni")
 
-mojom("mojom") {
+mojom_component("mojom") {
+  output_prefix = "media_session_public_mojom"
+  macro_prefix = "MEDIA_SESSION_PUBLIC_MOJOM"
+
   sources = [
     "audio_focus.mojom",
     "constants.mojom",
@@ -14,7 +17,5 @@ mojom("mojom") {
 
   public_deps = [
     "//mojo/public/mojom/base",
-    "//ui/gfx/geometry/mojo",
-    "//url/mojom:url_mojom_gurl",
   ]
 }
