--- a/chrome/browser/resources/chromeos/switch_access/BUILD.gn
+++ b/chrome/browser/resources/chromeos/switch_access/BUILD.gn
@@ -3,7 +3,6 @@
 # found in the LICENSE file.
 
 import("//build/config/features.gni")
-import("//chrome/common/features.gni")
 import("//testing/test.gni")
 import("//chrome/test/base/js2gtest.gni")
 import("//chrome/browser/resources/chromeos/chromevox/run_jsbundler.gni")
@@ -56,43 +55,23 @@ run_jsbundler("switch_access_copied_files") {
   ]
 }
 
-source_set("browser_tests") {
-  testonly = true
-  assert(enable_extensions)
-
+test("switch_access_tests") {
   deps = [
-    ":switch_access_extjs_tests",
-  ]
-
-  data = [
-    "//chrome/browser/resources/chromeos/chromevox/",
-    "//chrome/browser/resources/chromeos/switch_access/",
-    "//chrome/third_party/mock4js/",
-    "//third_party/accessibility-audit/axs_testing.js",
-    "//third_party/chaijs/chai.js",
-    "//ui/webui/resources/js/cr.js",
+    ":switch_access_webuijs_tests",
+    "//chrome/test:browser_tests_runner",
   ]
 }
 
-js2gtest("switch_access_extjs_tests") {
-  test_type = "extension"
+js2gtest("switch_access_webuijs_tests") {
+  test_type = "webui"
   sources = [
-    "auto_scan_manager_test.extjs",
-    "switch_access_predicate_test.extjs",
+    "auto_scan_manager_unittest.gtestjs",
+    "switch_access_predicate_unittest.gtestjs",
   ]
-  gen_include_files = [
-    "../chromevox/testing/callback_helper.js",
-    "switch_access_e2e_test_base.js",
-  ]
-
-  # The test base classes generate C++ code with these deps.
-  deps = [
-    "//ash",
-    "//base",
-    "//chrome/browser/chromeos",
-    "//chrome/common",
-    "//chromeos",
-    "//ui/keyboard",
+  extra_js_files = [
+    "auto_scan_manager.js",
+    "switch_access_predicate.js",
+    "test_support.js",
   ]
   defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]
 }
