--- a/services/network/BUILD.gn
+++ b/services/network/BUILD.gn
@@ -53,8 +53,6 @@ jumbo_component("network_service") {
     "keepalive_statistics_recorder.h",
     "loader_util.cc",
     "loader_util.h",
-    "mojo_host_resolver_impl.cc",
-    "mojo_host_resolver_impl.h",
     "net_log_capture_mode_type_converter.cc",
     "net_log_capture_mode_type_converter.h",
     "net_log_exporter.cc",
@@ -93,8 +91,6 @@ jumbo_component("network_service") {
     "proxy_config_service_mojo.h",
     "proxy_lookup_request.cc",
     "proxy_lookup_request.h",
-    "proxy_resolver_factory_mojo.cc",
-    "proxy_resolver_factory_mojo.h",
     "proxy_resolving_client_socket.cc",
     "proxy_resolving_client_socket.h",
     "proxy_resolving_client_socket_factory.cc",
@@ -103,8 +99,6 @@ jumbo_component("network_service") {
     "proxy_resolving_socket_factory_mojo.h",
     "proxy_resolving_socket_mojo.cc",
     "proxy_resolving_socket_mojo.h",
-    "proxy_service_mojo.cc",
-    "proxy_service_mojo.h",
     "resolve_host_request.cc",
     "resolve_host_request.h",
     "resource_scheduler.cc",
@@ -252,6 +246,14 @@ jumbo_component("network_service") {
     deps += [ "//sandbox/win:sandbox" ]
   }
 
+  sources += [
+    "proxy_resolver_factory_mojo.cc",
+    "proxy_resolver_factory_mojo.h",
+    "proxy_service_mojo.cc",
+    "proxy_service_mojo.h",
+  ]
+  deps += [ "//net/dns:mojo_service" ]
+
   defines = [ "IS_NETWORK_SERVICE_IMPL" ]
 
   if (is_chromecast) {
@@ -276,7 +278,6 @@ source_set("tests") {
     "http_cache_data_remover_unittest.cc",
     "ignore_errors_cert_verifier_unittest.cc",
     "keepalive_statistics_recorder_unittest.cc",
-    "mojo_host_resolver_impl_unittest.cc",
     "network_change_manager_unittest.cc",
     "network_context_unittest.cc",
     "network_quality_estimator_manager_unittest.cc",
