Revert "fido/win: build Windows WebAuthn API integration unconditionally"
This reverts commit 78bc18ecf2be5084bbca9e2d569f23ab653585da [formerly d0392055d87abcb3b311cf8b4d6a8fe9b1dc0578].

Reason for revert:

Findit (https://goo.gl/kROfz5) identified CL at revision 606686 as the
culprit for failures in the build cycles as shown on:
https://findit-for-me.appspot.com/waterfall/culprit?key=ag9zfmZpbmRpdC1mb3ItbWVyRAsSDVdmU3VzcGVjdGVkQ0wiMWNocm9taXVtL2QwMzkyMDU1ZDg3YWJjYjNiMzExY2Y4YjRkNmE4ZmU5YjFkYzA1NzgM

Sample Failed Build: https://ci.chromium.org/buildbot/chromium/linux-rel/9945

Sample Failed Step: compile

Original change's description:
> fido/win: build Windows WebAuthn API integration unconditionally
> 
> This makes fido/win include webauthn.h from
> //third_party/microsoft_webauthn and drops the USE_WIN_WEBAUTHN_API
> build flag we previously added due to the missing header file.
> 
> The implementation remains behind a default-off feature flag.
> 
> Bug: 898718
> Change-Id: I45e100f8b10cc32ea7e32d2842a63c950b5965bb
> Reviewed-on: https://chromium-review.googlesource.com/c/1325074
> Commit-Queue: Martin Kreichgauer <martinkr@chromium.org>
> Reviewed-by: Adam Langley <agl@chromium.org>
> Cr-Commit-Position: refs/heads/master@{#606686}

Change-Id: I53414fbe41280dbcb7a753599c946f5ef5ebd4ee
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Bug: 898718
Reviewed-on: https://chromium-review.googlesource.com/c/1328223
Cr-Commit-Position: refs/heads/master@{#606693}
Former-commit-id: bb253c29e6be82162bf0026930c44776ce15bb26

--- a/device/fido/BUILD.gn
+++ b/device/fido/BUILD.gn
@@ -4,6 +4,15 @@
 
 import("//build/config/features.gni")
 import("//testing/libfuzzer/fuzzer_test.gni")
+import("//build/buildflag_header.gni")
+
+import("buildflags.gni")
+
+# Generate a buildflag header for compile-time checking of Windows WebAuthn API integration.
+buildflag_header("buildflags") {
+  header = "buildflags.h"
+  flags = [ "USE_WIN_WEBAUTHN_API=$use_win_webauthn_api" ]
+}
 
 component("fido") {
   sources = [
@@ -142,11 +151,11 @@ component("fido") {
     "//services/service_manager/public/cpp",
     "//services/service_manager/public/mojom",
     "//third_party/boringssl",
-    "//third_party/microsoft_webauthn",
     "//ui/base",
   ]
 
   public_deps = [
+    ":buildflags",
     "//base",
     "//device/bluetooth",
     "//services/device/public/mojom",
@@ -199,7 +208,7 @@ component("fido") {
     ]
   }
 
-  if (is_win) {
+  if (is_win && use_win_webauthn_api) {
     sources += [
       "win/authenticator.cc",
       "win/authenticator.h",
@@ -323,7 +332,7 @@ source_set("test_support") {
     ]
   }
 
-  if (is_win) {
+  if (is_win && use_win_webauthn_api) {
     sources += [
       "win/fake_webauthn_api.cc",
       "win/fake_webauthn_api.h",
