--- a/BUILD.gn
+++ b/BUILD.gn
@@ -61,6 +61,22 @@ config("nasm_config") {
       # NASM sometimes compares enums to unsigned integers.
       "-Wno-sign-compare",
     ]
+  } else if (is_win) {
+    # Please note that's a slightly different set of warnings.
+    cflags = [
+      # NASM sometimes redefines macros from its config.h.
+      "/wd4005",  # macro redefinition
+
+      # NASM sometimes compares enums to unsigned integers.
+      "/wd4018",  # sign compare
+
+      # NASM comment: Uninitialized -> all zero by C spec
+      # Or sometimes one const struct is forward declared for no reason.
+      "/wd4132",  # const object should be initialized
+
+      # NASM uses "(-x) & 0xFF" pattern to negate byte.
+      "/wd4146",  # unary minus operator applied to unsigned type
+    ]
   }
 }
 
