Fix windows build warnings for MSVC (continued).
Bug: chromium:766721
Change-Id: I27ab96eeb9e25a87ac37553a33577d79680ec32a

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -70,6 +70,9 @@ config("nasm_config") {
       # NASM sometimes compares enums to unsigned integers.
       "/wd4018",  # sign compare
 
+      # char VS const char mismatch.
+      "/wd4028",  # formal parameter 1 different from declaration.
+
       # NASM comment: Uninitialized -> all zero by C spec
       # Or sometimes one const struct is forward declared for no reason.
       "/wd4132",  # const object should be initialized
