--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,9 +31,11 @@ shared-build:
       - build-*/fontconfig*/_build/sub/*.log
       - build-*/fontconfig*/_build/sub/test/*.log
       - build-*/fontconfig*/_build/sub/test/*.trs
+      - build-*/fontconfig*/_build/sub/test/out*
       - build-*/*.log
       - build-*/test/*.log
       - build-*/test/*.trs
+      - build-*/test/out*
       - prefix-*
 static-build:
   stage: build
@@ -54,6 +56,7 @@ static-build:
       - build-*/*.log
       - build-*/test/*.log
       - build-*/test/*.trs
+      - build-*/test/out*
 mingw-build:
   stage: build
   script:
@@ -74,4 +77,4 @@ mingw-build:
       - build-*/*.log
       - build-*/test/*.log
       - build-*/test/*.trs
-
+      - build-*/test/out*
