chromeos-config: Migrate CQ builders to CQ bot group
Last step to remove the overall Prod bot group, moving the current Prod
and CQ builders to a single CQ bot group, which will replace the
affinity bot group.

This also moves the payload builders to the release bot group.

BUG=chromium:939553
TEST='cros_sdk -- /mnt/host/source/chromite/run_tests'

Change-Id: Id288e27cdd1a2b845a29b1cc8348e119cdd8a494
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/chromite/+/1545077
Reviewed-by: David Burger <dburger@chromium.org>
Tested-by: Mike Nichols <mikenichols@chromium.org>

--- a/config/luci-scheduler.cfg
+++ b/config/luci-scheduler.cfg
@@ -2651,7 +2651,7 @@ job {
   buildbucket: {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.chromeos.general"
-    builder: "Prod"
+    builder: "CommitQueue"
     tags: "cbb_branch:master"
     tags: "cbb_config:master-paladin"
     tags: "cbb_display_label:cq"
@@ -2777,7 +2777,7 @@ job {
   buildbucket: {
     server: "cr-buildbucket.appspot.com"
     bucket: "luci.chromeos.general"
-    builder: "Prod"
+    builder: "Infra"
     tags: "cbb_branch:master"
     tags: "cbb_config:pre-cq-launcher"
     tags: "cbb_display_label:pre_cq"
