[M74 Reland] MediaCapabilities: Set new features *AFTER* finalizing previous record.
Reland: fix the unit test break.

This order ensures stats are saved with the correct stream features.

Bug: 945191, 947382
Change-Id: Ie4abb5dd109ce85fe9ef8145caff56f1e44fd21a
TBR: liberato@chromium.org
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1546609
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#560}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 2d6141c6e4b80213bd7c8cd44744083759e10a69

--- a/media/learning/common/BUILD.gn
+++ b/media/learning/common/BUILD.gn
@@ -15,6 +15,9 @@ component("common") {
 
     # Actual client code
     "//media/capabilities",
+
+    # Test code
+    "//media/mojo/services:unit_tests",
   ]
 
   defines = [ "IS_LEARNING_COMMON_IMPL" ]
