--- a/remoting/host/BUILD.gn
+++ b/remoting/host/BUILD.gn
@@ -467,6 +467,7 @@ source_set("unit_tests") {
     "client_session_unittest.cc",
     "config_file_watcher_unittest.cc",
     "daemon_process_unittest.cc",
+    "desktop_display_info_unittest.cc",
     "desktop_process_unittest.cc",
     "desktop_session_agent_unittest.cc",
     "gcd_rest_client_unittest.cc",
