[SEC] Adding Search Engine Choice handling code
This patch:
* Creates a class SearchEngineChoiceNotification.
* Creates preferences to track whether the user needs to be prompted or
  whether they have been prompted already.
* Shows a snackbar, which gets the user to appropriate settings page.
* Adds metrics regarding the events and updated search engine.
* Adds tests.

TBR=fgorski@chromium.org

(cherry picked from commit 8668c37ab536281f87ec33c492ae12ff610495f6 [formerly c8d317771e9f99ee731d0ae7b1106ac16db3fe64])

Bug: 945376
Change-Id: Ib1cdcb9a8cc8e4c6bcc72fea514902e1d2207f2b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1542673
Commit-Queue: Filip Gorski <fgorski@chromium.org>
Reviewed-by: Ted Choc <tedchoc@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#646113}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1548031
Reviewed-by: Filip Gorski <fgorski@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#585}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 281709e893a452901bde7c8e74805fb24ac815c3

--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -1371,6 +1371,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/rappor/RapporServiceBridge.java",
   "java/src/org/chromium/chrome/browser/rlz/RevenueStats.java",
   "java/src/org/chromium/chrome/browser/rlz/RlzPingHandler.java",
+  "java/src/org/chromium/chrome/browser/search_engines/SearchEngineChoiceNotification.java",
   "java/src/org/chromium/chrome/browser/search_engines/TemplateUrl.java",
   "java/src/org/chromium/chrome/browser/search_engines/TemplateUrlService.java",
   "java/src/org/chromium/chrome/browser/searchwidget/SearchActivity.java",
@@ -2499,6 +2500,7 @@ chrome_junit_test_java_sources = [
   "junit/src/org/chromium/chrome/browser/preferences/password/SingleThreadBarrierClosureTest.java",
   "junit/src/org/chromium/chrome/browser/preferences/password/TimedCallbackDelayerTest.java",
   "junit/src/org/chromium/chrome/browser/preferences/privacy/PrivacyPreferencesManagerTest.java",
+  "junit/src/org/chromium/chrome/browser/search_engines/SearchEngineChoiceNotificationTest.java",
   "junit/src/org/chromium/chrome/browser/send_tab_to_self/SendTabToSelfAndroidBridgeTest.java",
   "junit/src/org/chromium/chrome/browser/signin/SigninManagerTest.java",
   "junit/src/org/chromium/chrome/browser/signin/SigninPromoUtilTest.java",
